Fix Dough lib and use fixed InfinityLib